force-app/main/default/objects/Risk_Profile_PDM_Feature__c/Risk_Profile_PDM_Feature__c.object-meta.xml
<CustomObject>
    <label>Risk Profile PDM Feature</label>
    <nameField>
        <displayFormat>RP-PDM-{000000}</displayFormat>
        <label>Risk Profile PDM Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Profile PDM Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>