force-app/main/default/objects/Risk_Profile_PDM_Feature__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <formula>TEXT(PDM_Feature__r.Feature__c)</formula>
    <label>Feature</label>
    <type>Text</type>
</CustomField>