force-app/main/default/objects/Risk_Profile_PDM_Feature__c/fields/PDM_Feature__c.field-meta.xml
<CustomField>
    <fullName>PDM_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDM Feature</label>
    <referenceTo>Product_Feature__c</referenceTo>
    <relationshipLabel>Risk Profile PDM Features</relationshipLabel>
    <relationshipName>Risk_Profile_PDM_Features</relationshipName>
    <type>Lookup</type>
</CustomField>