force-app/main/default/objects/Risk_Profile_PDM_Feature__c/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <label>Risk Profile</label>
    <referenceTo>Risk_Profile__c</referenceTo>
    <relationshipLabel>Risk Profile PDM Features</relationshipLabel>
    <relationshipName>Risk_Profile_PDM_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>