force-app/main/default/objects/Risk_Profile_PDM_Feature__c/fields/Risk_Profile_Entitlement_Product__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Entitlement_Product__c</fullName>
    <formula>Risk_Profile__r.Entitlement__r.Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Profile Entitlement Product</label>
    <type>Text</type>
</CustomField>